--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,31 @@
 .jumbotron .container img {
     position: absolute;
     left: 0;
-    top: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
+}
+
+@media (min-width: 768px)
+{
+    .jumbotron .container img
+    {
+        top: 0px;
+    }
+}
+@media (min-width: 992px)
+{
+    .jumbotron .container img
+    {
+        top: -152px;
+    }
+}
+
+
+@media .jumbotron .container img {
+    position: absolute;
+    left: 0;
+    top: 100px;
     width: 100%;
     height: auto;
     opacity: 0.6;
